# quantising

./: README.md  config.yaml  modal_app.py  pyproject.toml
scripts/: analyze_results.py  main.py  run_all_experiments.py
src/: custom_int8.py  evaluator.py  quantizer.py  utils.py
